--- a/View/css/products.css
+++ b/View/css/products.css
@@ -11,8 +11,11 @@
     margin-top: 120px;
 }
 
+.active {
+    background: var(--main-color);
+}
+
 .sidebar {
-    width: 200px;
     margin-right: 20px;
     background-color: #fafafa;
     padding: 20px;
@@ -33,6 +36,7 @@
 .sidebar ul {
     list-style: none;
     padding: 0;
+    color: #333;
 }
 
 .sidebar li {
@@ -40,6 +44,10 @@
     cursor: pointer;
     transition: background-color 0.3s ease, padding 0.3s ease; /* Thêm hiệu ứng chuyển động */
     border-radius: 6px; /* Bo tròn các mục */
+}
+
+.sidebar li a {
+    color: #000;
 }
 
 .sidebar li:hover {
